<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".HomepageActivity">

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center" android:textSize="24sp" android:layout_gravity="center_horizontal"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stethescope" android:layout_gravity="center_horizontal"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/please_login_label" android:layout_gravity="center_horizontal"
              android:textStyle="italic" android:textSize="14sp" android:textIsSelectable="true"/>

    <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/login_fields_width"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:maxLines="1"
            android:singleLine="true" android:layout_gravity="center_horizontal"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/login_fields_width"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" android:layout_gravity="center_horizontal"/>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
