<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="8dp">

    <TextView android:id="@+id/medication_name_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/medication_name_label"
              style="@android:style/TextAppearance.Material.Body2"/>

    <EditText android:id="@+id/edit_medication_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"/>

    <TextView android:id="@+id/dosage_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dosage_label"
              style="@android:style/TextAppearance.Material.Body2"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="4"
                  android:layout_marginLeft="8dp"
                  android:layout_marginRight="8dp">
        <EditText android:id="@+id/edit_dosage"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:layout_weight="3"/>
        <Spinner android:id="@+id/dosage_unit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
    </LinearLayout>

    <TextView android:id="@+id/instructions_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/instructions_label"
              style="@android:style/TextAppearance.Material.Body2"/>

    <EditText android:id="@+id/edit_instructions"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"/>

</LinearLayout>