<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chicovg.symptommgmt.PatientDashboardFragment">

   <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp" android:layout_marginRight="6dp"
            android:layout_marginTop="6dp" android:layout_marginBottom="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">
            <TextView
                    android:id="@+id/greeting"
                    android:layout_margin="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Material.Headline"/>
            <TextView
                    android:id="@+id/how_are_you"
                    android:layout_margin="4dp"
                    android:layout_below="@+id/greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/checkInButton"
                    android:text="@string/how_are_you_text"
                    android:textSize="18sp" />

            <Button android:id="@+id/check_in_button"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/how_are_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/check_in_button_label"
                    android:layout_margin="12dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp" android:layout_marginRight="6dp"
            android:layout_marginTop="6dp" android:layout_marginBottom="2dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">
        <LinearLayout
                android:id="@+id/check_in_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/check_in_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/recent_check_ins_title"
                    android:textSize="26sp" android:gravity="center_horizontal"
                    style="@android:style/TextAppearance.Material.Headline"/>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                <TextView android:layout_alignParentLeft="true"
                          android:layout_alignParentStart="true"
                          android:layout_margin="4dp"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/date_and_time_label"
                          style="@android:style/TextAppearance.Material.Body2"/>
                <TextView android:layout_alignParentRight="true"
                          android:layout_margin="4dp"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/pain_level_label" style="@android:style/TextAppearance.Material.Body2"/>
            </RelativeLayout>

            <ListView
                    android:id="@+id/check_in_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
